--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,40 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
+
+    ext {
+        version_gradle = '3.4.2'
+        version_kotlin = "1.3.41"
+
+        version_appcompat = "1.0.2"
+        version_fragment = "1.0.0"
+        version_constraint_layout = "2.0.0-alpha3"
+
+        version_ktx = "1.0.1"
+
+        version_timber = "4.7.1"
+
+        version_coroutine = "1.3.0-RC2"
+
+        version_navigation = '1.0.0'
+
+        version_recyclerview = '1.0.0'
+
+        version_material_design = "1.1.0-alpha04"
+
+        version_lifecycle_extensions = "2.0.0"
+        version_room = "2.2.0-alpha02"
+    }
+
+
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
