--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:name=".ApplicationController">
-        <activity android:name=".MainActivity">
+        <activity android:name=".views.settings.HomeSettingsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
