--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,6 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
     implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
     implementation "androidx.core:core-ktx:$version_ktx"
-    implementation "androidx.viewpager2:viewpager2:1.0.0-beta05"
-
     implementation "androidx.room:room-runtime:$version_room"
     annotationProcessor "android.arch.persistence.room:compiler:$version_room"
     androidTestImplementation "android.arch.persistence.room:testing:$version_room"
@@ -76,6 +74,7 @@ dependencies {
 
 
     //Material design
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "com.google.android.material:material:$version_material_design"
 
     // Navigation
