--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:name=".ApplicationController">
-        <activity android:name=".MainActivity">
+        <activity android:name=".views.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -18,7 +18,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".views.settings.SettingsActivity"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".views.home.HomeActivity">
+        </activity>
+        <activity android:name=".views.routine.RoutineActivity">
+            <!--android:parentActivityName=".views.home.HomeActivity"-->
+
         </activity>
     </application>
 
